fixtures/merge/negatives_in_between/copies/0123456789abcdef/scores.zc
1,0.0.0.0,4096,30,NOW,M
2,0.0.0.0,4096,20,NOW,E
3,0.0.0.0,4096,10,NOW,E
